// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IdentityOverview should render a normal identity 1`] = `
<div>
  <main
    class="container"
  >
    <header>
      <h1
        class="heading"
      >
        Your Identities
      </h1>
      <p
        class="info"
      >
        You have 3 identities
      </p>
    </header>
    <div
      class="container"
    >
      <section>
        <div
          class="avatar"
        >
          Identicon
        </div>
        <div
          class="nameLine"
        >
          <span
            class="name"
          >
            My Sporran Identity
          </span>
          <div
            class="wrapper"
          >
            <button
              aria-expanded="false"
              aria-haspopup="true"
              aria-label="Identity options"
              class="toggle"
              role="button"
              tabindex="0"
              title="Identity options"
              type="button"
            />
          </div>
        </div>
      </section>
      <a
        aria-label="Create new identity"
        class="left"
        href="/identity/NEW"
        title="Create new identity"
      />
      <a
        aria-label="My Second Identity"
        class="right"
        href="/identity/4sm9oDiYFe22D7Ck2aBy5Y2gzxi2HhmGML98W9ZD2qmsqKCr"
        title="My Second Identity"
      />
      <ul
        class="bubbles"
      >
        <li
          class="item"
        >
          <a
            aria-current="page"
            aria-label="My Sporran Identity"
            class="bubble bubbleActive"
            href="/identity/4tJbxxKqYRv3gDvY66BKyKzZheHEH8a27VBiMfeGX2iQrire"
            title="My Sporran Identity"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-label="My Second Identity"
            class="bubble"
            href="/identity/4sm9oDiYFe22D7Ck2aBy5Y2gzxi2HhmGML98W9ZD2qmsqKCr"
            title="My Second Identity"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-label="My Third Identity which has a very long name and might not even fit on the screen"
            class="bubble"
            href="/identity/4oyRTDhHL22Chv9T89Vv2TanfUxFzBnPeMuq4EFL3gUiHbtL"
            title="My Third Identity which has a very long name and might not even fit on the screen"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-label="Create new identity"
            class="add"
            href="/identity/NEW"
            title="Create new identity"
          />
        </li>
      </ul>
    </div>
    <p
      class="balanceLine"
    >
      Total Balance: 
      <span
        class="amount"
      >
        1.2340
         
        <span
          aria-label="Kilt coin"
          class="coin"
        />
      </span>
      <button
        aria-label="Show balance breakdown"
        class="showBreakdown"
        title="Show balance breakdown"
        type="button"
      />
    </p>
    <p>
      <a
        class="button"
        href="/identity/4tJbxxKqYRv3gDvY66BKyKzZheHEH8a27VBiMfeGX2iQrire/send"
      >
        Send
      </a>
      <a
        class="button"
        href="/identity/4tJbxxKqYRv3gDvY66BKyKzZheHEH8a27VBiMfeGX2iQrire/receive"
      >
        Receive
      </a>
    </p>
    <p
      class="stats"
    >
      You have 3 identities with a total
      <span
        class="balance"
      >
         Balance: 
        <span
          class="amount"
        >
          3.7020
           
          <span
            aria-label="Kilt coin"
            class="coin"
          />
        </span>
      </span>
    </p>
  </main>
  ,
</div>
`;

exports[`IdentityOverview should render the new identity 1`] = `
<div>
  <main
    class="container"
  >
    <header>
      <h1
        class="heading"
      >
        Your Identities
      </h1>
      <p
        class="info"
      >
        You have 3 identities
      </p>
    </header>
    <div
      class="container"
    >
      <section>
        <a
          aria-label="Create new identity"
          class="create"
          href="/identity/create"
          title="Create new identity"
        />
        <p
          class="new"
        >
          Create new identity
        </p>
      </section>
      <a
        aria-label="My Third Identity which has a very long name and might not even fit on the screen"
        class="left"
        href="/identity/4oyRTDhHL22Chv9T89Vv2TanfUxFzBnPeMuq4EFL3gUiHbtL"
        title="My Third Identity which has a very long name and might not even fit on the screen"
      />
      <a
        aria-label="My Sporran Identity"
        class="right"
        href="/identity/4tJbxxKqYRv3gDvY66BKyKzZheHEH8a27VBiMfeGX2iQrire"
        title="My Sporran Identity"
      />
      <ul
        class="bubbles"
      >
        <li
          class="item"
        >
          <a
            aria-label="My Sporran Identity"
            class="bubble"
            href="/identity/4tJbxxKqYRv3gDvY66BKyKzZheHEH8a27VBiMfeGX2iQrire"
            title="My Sporran Identity"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-label="My Second Identity"
            class="bubble"
            href="/identity/4sm9oDiYFe22D7Ck2aBy5Y2gzxi2HhmGML98W9ZD2qmsqKCr"
            title="My Second Identity"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-label="My Third Identity which has a very long name and might not even fit on the screen"
            class="bubble"
            href="/identity/4oyRTDhHL22Chv9T89Vv2TanfUxFzBnPeMuq4EFL3gUiHbtL"
            title="My Third Identity which has a very long name and might not even fit on the screen"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-current="page"
            aria-label="Create new identity"
            class="add addActive"
            href="/identity/NEW"
            title="Create new identity"
          />
        </li>
      </ul>
    </div>
    <a
      class="import"
      href="/identity/import"
    >
      Import an identity from pre-existing phrase
    </a>
    <p
      class="stats"
    >
      You have 3 identities with a total
      <span
        class="balance"
      >
         Balance: 
        <span
          class="amount"
        >
          3.7020
           
          <span
            aria-label="Kilt coin"
            class="coin"
          />
        </span>
      </span>
    </p>
  </main>
  ,
</div>
`;
